Fixed navbar spacing and updated events page

--- a/Frontend/src/App.css
+++ b/Frontend/src/App.css
@@ -284,7 +284,7 @@ body {
   gap: 30px;
 }
 .event-container {
-  min-height: 100vh;
+  min-height: 98vh;
   display: flex;
   justify-content: center;
   align-items: flex-start;
@@ -296,8 +296,9 @@ body {
 .event-card {
   width: 380px;
   max-width: 100%;
+  margin-top: 50px;
   background: white;
-  padding: 40px;
+  padding: 30px;
   border-radius: 25px;
   box-shadow: 0 10px 30px rgba(0, 0, 0, 0.08);
   transition: 0.3s;
@@ -327,7 +328,7 @@ body {
 .event-form {
   display: flex;
   flex-direction: column;
-  gap: 18px;
+  gap: 13px;
   margin-top: 30px;
 }
 
